[project]
name = "article"
version = "0.1.0"
description = "Streamlit tools and utilities for the Maximizing Portfolio Predictability paper"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cvxpy",
    "numpy",
    "pandas",
    "streamlit",
    "yfinance",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
